--- a/src/Endless/Endless.csproj
+++ b/src/Endless/Endless.csproj
@@ -1,65 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Basic build">
-    <TargetFrameworks>net40;netstandard1.1;</TargetFrameworks>
-    <LangVersion>7.3</LangVersion>
-    <Deterministic>true</Deterministic>
+  <PropertyGroup>
+    <TargetFramework>net10.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <PropertyGroup Label="NuGet package">
-    <Authors>Tomáš Pažourek</Authors>
-    <Company>$(Authors)</Company>
-    <Copyright>$(Copyright)</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/tompazourek/Endless</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
-    <PackageReleaseNotes>$(RepositoryUrl)/releases</PackageReleaseNotes>
-    <PackageIcon>logo_64.png</PackageIcon>
-    <PackageTags>c-sharp collections enumerable enumerator extensions functional generate ienumerable ienumerable-extension infinite infinite-sequences iterate lazy lazy-evaluation random reduce sequences stream</PackageTags>
-    <Description>Extensions that support the C# functional paradigm, focusing mainly on infinite enumerables.</Description>
-  </PropertyGroup>
-
-  <PropertyGroup Label="Symbols, docs">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-  </PropertyGroup>
-
-  <PropertyGroup Label="CI build only" Condition=" '$(CI)' == 'true' ">
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="MinVer" Version="2.2.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net40' ">
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.1' ">
-    <PackageReference Include="Microsoft.CSharp" Version="4.0.1" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <None Remove="*.DotSettings" />
-    <None Include="..\..\assets\logo_64.png" Pack="true" PackagePath="" />
-  </ItemGroup>
-    
-  <Target Name="UpdateAppVeyorBuildVersion" AfterTargets="MinVer" Condition=" '$(APPVEYOR)' == 'true' ">
-    <Exec Command="appveyor UpdateBuild -Version &quot;$(MinVerVersion)&quot;" />
-   </Target>
 </Project>
